# Viper

./: .gitignore  LICENSE  Readme.md
cobraplus_backend/cobraplus/: Readme.md  append_main.py  config.yaml  main_allcases.py  test_yaml.py
cobraplus_backend/cobraplus/ae/: run_BE19.py  run_BE19.sh  run_elle.py  run_fig10.sh  run_fig11.sh  run_fig12.sh  run_fig8.sh  run_fig9.sh
cobraplus_backend/cobraplus/buildgraph/: build_graph4adyaSI.py  build_graph4adyaSI_chain.py  build_graph4append.py
cobraplus_backend/scripts/: run_adyaSI_check.sh
resources/: BE19_translator.tgz  dbcop.tgz  monosat.tgz
resources/dbcop/: Cargo.toml  README.md
resources/dbcop/examples/: cockroachdb.rs  disql.rs
resources/dbcop/src/: lib.rs  main.rs
resources/dbcop/src/consistency/: algo.rs  mod.rs  sat.rs  util.rs
resources/dbcop/src/db/: history.rs
resources/dbcop/src/verifier/: mod.rs  util.rs
src/: Readme.md  config.yaml  main_allcases.py
src/ae/: heuristicOPT.sh  run_BE19.py  run_BE19.sh  run_elle.py  run_elle_bug_detection.py  run_fig10.sh  run_fig11.sh  run_fig12.sh  run_fig13.sh  run_fig14.sh  run_fig15.sh  run_fig8.sh  run_fig9.sh
src/algos/: algo.py  algo_entrances.py
src/buildgraph/: build_graph4adyaSI.py  build_graph4adyaSI_chain.py  build_graph4append.py
src/checker/: checkers.py
src/docker/: Dockerfile  requirements.txt
src/optimization/: chain_heuristic.py  pair_heuristic.py
src/parse/: append_parse.py  wr_range_parse.py
src/utils/: constants.py  exceptions.py  graphs.py  profiler.py  range_utils.py  utils.py
(+20 files in other folders)
