[package]
name = "dbcop"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]

[dependencies]
rand = "0.7.3"
clap = "2.33.3"
minisat = "0.4.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
byteorder = "1.3.4"
rayon = "1.5.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-json = "2.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.1"

[dev-dependencies]
nom = "6.0.0"
mysql = "20.0.1"
postgres = "0.18.1"
mongodb = "1.1.1"
antidotedb = { git = "https://github.com/rnbguy/antidotedb_rs" }

[profile.release]
opt-level = 3
